<resources>
    <string name="app_name">todo</string>
    <string name="cancel">cancel</string>
    <string name="action_settings">Settings</string>
    <string name="name_of_your_task">Name of your task</string>
    <string name="description">Description</string>
    <string name="date_picker_content">Pick date and time for your task</string>
    <string name="priority_level">Priority level</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tag_of_your_task">Tag of your task</string>
    <string name="set_time_for_your_task">Set time for your task</string>
    <string name="submit">submit</string>
    <string name="confirm">confirm</string>
    <string name="pick_date_string">Pick a date</string>
    <string name="field_required_message">Field required</string>
    <string name="no_alarm">No alarm</string>
    <string name="date_pick_error_msg">Can\'t select date before today</string>
    <string name="cycle_alert_dialog_title">Choose cycle for your task </string>
    <string name="cycle">Cycle</string>
    <string name="name_label">Name:</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="tag_label">Tag:</string>
    <string name="priority_level_label">Priority level:</string>
    <string name="notification_type_label">Notification type:</string>
    <string name="alarm_notification_channel">ALARM_CHANNEL</string>
    <string name="alarm_channel_description">Test description for alarm notification channel</string>
</resources>
