<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.patrykzygo.todo.ui.add_task.AddTaskViewModel" />
    </data>

    <!--TODO: make this layout responsive -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name_of_your_task"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_name_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_tag_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/tag_of_your_task"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintBaseline_toBaselineOf="@+id/task_priority_input_layout"
                app:layout_constraintEnd_toStartOf="@+id/task_priority_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_tag_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_priority_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/priority_level"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                app:layout_constraintBottom_toBottomOf="@+id/task_tag_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_tag_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/task_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_priority_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_cycle_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/cycle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_time_layout"
                app:startIconDrawable="@drawable/ic_cycle_24"
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_cycle_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/date"
                app:layout_constraintEnd_toStartOf="@+id/task_time_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_priority_input_layout"
                app:startIconDrawable="@drawable/ic_date_range_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_time_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/time"
                app:layout_constraintBottom_toBottomOf="@+id/task_date_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_date_layout"
                app:layout_constraintTop_toTopOf="@+id/task_date_layout"
                app:startIconDrawable="@drawable/ic_add_alarm_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_time_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/task_alarm_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:checkedButton="@id/task_type_notification"
                android:orientation="horizontal"
                android:weightSum="9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_cycle_layout">


                <RadioButton
                    android:id="@+id/task_type_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="@dimen/padding"
                    android:text="@string/notification" />

                <RadioButton
                    android:id="@+id/task_type_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="@dimen/padding"
                    android:text="@string/alarm" />

                <RadioButton
                    android:id="@+id/task_type_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="@dimen/padding"
                    android:text="@string/no_alarm" />


            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_description_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/description"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_alarm_radio_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_task_button"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/submit"
                android:textColor="#ffffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_description_input_layout"
                app:layout_constraintVertical_bias="0.050000012" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>