<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="pl.patrykzygo.todo.ui.task_details.TaskDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_label"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.task.name}"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/name_label" />

        <View
            android:id="@+id/first_divider"
            style="@style/Divider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name_label" />


        <TextView
            android:id="@+id/date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintTop_toBottomOf="@+id/first_divider" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/date_label"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <TextView
            android:id="@+id/task_date_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="task_date"
            android:textAlignment="center"
            app:taskDate="@{viewModel.task.date}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_label"
            app:layout_constraintEnd_toEndOf="@+id/task_name_label"
            app:layout_constraintStart_toStartOf="@+id/task_name_label"
            app:layout_constraintTop_toTopOf="@+id/date_label" />

        <TextView
            android:id="@+id/task_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            taskTime="@{viewModel.task.date}"
            android:layout_marginEnd="8dp"
            android:text="task_time"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/time_label"
            app:layout_constraintEnd_toEndOf="@+id/task_date_string"
            app:layout_constraintStart_toStartOf="@+id/task_date_string"
            app:layout_constraintTop_toTopOf="@+id/time_label" />

        <View
            android:id="@+id/second_divider"
            style="@style/Divider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tag_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tag_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/time_label"
            app:layout_constraintTop_toBottomOf="@+id/second_divider" />

        <TextView
            android:id="@+id/priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/priority_level_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tag_label"
            app:layout_constraintTop_toBottomOf="@+id/tag_label" />

        <TextView
            android:id="@+id/task_tag_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.task.tag}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tag_label"
            app:layout_constraintEnd_toEndOf="@+id/task_time_label"
            app:layout_constraintStart_toStartOf="@+id/task_time_label"
            app:layout_constraintTop_toTopOf="@+id/tag_label"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/task_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.task.priority}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/priority_label"
            app:layout_constraintEnd_toEndOf="@+id/task_tag_label"
            app:layout_constraintStart_toStartOf="@+id/task_tag_label"
            app:layout_constraintTop_toTopOf="@+id/priority_label" />

        <View
            android:id="@+id/third_divider"
            style="@style/Divider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority_label" />

        <TextView
            android:id="@+id/notification_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notification_type_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/priority_label"
            app:layout_constraintTop_toBottomOf="@+id/third_divider" />

        <TextView
            android:id="@+id/task_notification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.task.notificationType}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/notification_type_label"
            app:layout_constraintEnd_toEndOf="@id/task_priority_label"
            app:layout_constraintStart_toStartOf="@+id/task_priority_label"
            app:layout_constraintTop_toTopOf="@+id/notification_type_label"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>